crates/rb-storage-neo4j/tests/fixtures/cypher_attacks/reject/038.cypher
CALL db.labels(); RETURN 1
